--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,77 @@
-#container {
+ion-header {
+  ion-toolbar {
+  padding: 0 10px ;
+  }
+}
+
+ion-toolbar {
+  #btn1 {
+    --border-radius:15px;
+    size: large;
+  }
+}
+
+#header {
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  font-size: 40px;
+  font-family: Arial;
 }
 
-#container strong {
+#title {
+  text-align: center;
+  font-size: 30px;
+  font-family: Arial;
+  font-weight: bold;
+}
+
+#text {
+  text-align: center;
   font-size: 20px;
-  line-height: 26px;
 }
 
-#container p {
+ion-content {
+  --background: #f7fafc;
+}
+
+ion-card {
+  margin: 50px auto;
+  box-shadow: 0px 3px 45px 0px rgb(191, 191, 195);
+  border-radius: 30px;
+  width: 80%;
+  padding: 5px 5px 5px 5px;
+}
+
+img {
+  margin: 50px;
+  align-items: center;
+width: 80%;
+}
+
+
+
+.input {
+  border-radius: 30px;
+  border-color: rgb(130, 198, 238);
+  box-shadow: 0px 3px 40px 0px rgb(220, 220, 223);
+  background: transparent;
+  margin-left: 11%;
+  width: 80%;
+  font-family: Josefin Sans;
   font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+  line-height: 1.5;
+  height: 46px;
+  padding: 0 20px 0 23px;
 }
 
-#container a {
-  text-decoration: none;
+#btn2 {
+   margin-left: 30%;
+   margin-top: 5%;
+   --border-radius: 45px;
+}
+
+#title2 {
+  text-align: center;
+  font-size: 30px;
+  font-family: Arial;
+  font-weight: bold;
 }
