--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -56,9 +56,15 @@
     #it1 {
       padding-top: 5px;;
     }
+
     #it2, #it3, #it4, #it5{
       padding-top: 10px;
       padding-bottom: 2px;
 
     }
 
+    #signin {
+      --background: rgb(51, 174, 211);
+      margin-top: 5%;
+      font-weight: bold;
+    }
