--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,8 +5,8 @@
     </ion-buttons>
 
   <ion-buttons slot="end">
-    <ion-button id="btn1" fill="outline" color="primary" size="large">
-     LOGIN
+    <ion-button id="btn1" fill="outline" color="primary" size="large" routerLink="/login">
+     SIGN UP
     </ion-button>
   </ion-buttons>
   </ion-toolbar>
@@ -34,7 +34,12 @@
     </ion-card-content>
   </ion-card>
 
-  <img id="img" src="../img/group-of-zoo-animals.jpg" alt="The image is brocken">
+
+
+  <ion-card>
+    <ion-img src="https://media.istockphoto.com/photos/group-of-zoo-animals-together-isolated-picture-id989561914?s=612x612"></ion-img>
+  </ion-card>
+
 
   <ion-card>
     <ion-card-header>
@@ -46,6 +51,8 @@
       </ion-card-content>
   </ion-card>
 
-  <img id="img" src="../img/meat.jpg" alt="The image is brocken">
+<ion-card>
+  <ion-img src="https://media.istockphoto.com/photos/selection-of-protein-sources-in-kitchen-background-picture-id505592886?s=612x612"></ion-img>
+</ion-card>
 
 </ion-content>
