--- a/src/app/signin-provider/signin-provider.page.html
+++ b/src/app/signin-provider/signin-provider.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>signin-provider</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content color="primary">
+<ion-content>
 
 </ion-content>
