The login, signup, Startpage and about us are made. They are only made. They donot work yet!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,19 +12,19 @@
       </div>
 
       <ion-list class="item-list" lines="none">
-        <ion-item >
+        <ion-item routerLink="/products">
           Products
         </ion-item>
-        <ion-item>
+        <ion-item routerLink="/home">
           Start page
         </ion-item>
-        <ion-item>
+        <ion-item routerLink="/search">
           Search for Products
         </ion-item>
-        <ion-item>
+        <ion-item routerLink="experience">
           Customer Experience
         </ion-item>
-        <ion-item>
+        <ion-item routerLink="aboutus">
           About us
         </ion-item>
         <ion-item>
