--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -46,7 +46,7 @@
       <ion-card-title id="title2">What Product are you searching for</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-        <input class="input" type="text" name="product" placeholder="Enter what you want to find">
+        <ion-searchbar placeholder="Write something"></ion-searchbar>
         <ion-button id="btn2">SEARCH</ion-button>
       </ion-card-content>
   </ion-card>
