--- a/src/app/loginfrom-menu/loginfrom-menu.page.html
+++ b/src/app/loginfrom-menu/loginfrom-menu.page.html
@@ -5,20 +5,20 @@
     </ion-buttons>
 
     <ion-buttons slot="end">
-      <ion-back-button color="light" size="large">
-      </ion-back-button>
+      <ion-back-button color="light" text="" icon="arrow-back-circle-outline" size="large"></ion-back-button>>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content >
+  <ion-card color="light">
 <h1 id="header">LOGIN</h1>
-<ion-item class="inp">
+<div class="inp1">
   <ion-input placeholder=" Email or ID" inputmode="text"></ion-input>
-</ion-item>
-<ion-item class="inp2">
+</div>
+<div class="inp2">
   <ion-input placeholder=" Password" pattern="password" type="password"></ion-input>
-</ion-item>
-
+</div>
 <ion-button id="btn1" shape="round">login</ion-button>
+</ion-card>
 </ion-content>
