--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
  .menu {
       height: 400px;
       width: 700px;
-      background-color: rgb(51, 174, 211);
+      background-color: #3B91E1;
       background: linear-gradient(90deg);
       box-shadow: 0px 1px 10px rgba(98, 140, 255, 0.5);
       transform: rotate(-15deg);
@@ -41,6 +41,7 @@
       font-weight: bold;
       margin-bottom: 25px;
       margin-left: 20px;
+      --detail-icon-color :white;
     }
 
     .list {
@@ -64,7 +65,7 @@
     }
 
     #signin {
-      --background: rgb(51, 174, 211);
+      --background: #3B91E1;
       margin-top: 5%;
       font-weight: bold;
     }
