--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -13,13 +13,13 @@ ion-toolbar {
 
 #header {
   text-align: center;
-  font-size: 40px;
+  font-size: 30px;
   font-family: Arial;
 }
 
 #title {
   text-align: center;
-  font-size: 30px;
+  font-size: 35px;
   font-family: Arial;
   font-weight: bold;
 }
@@ -42,22 +42,17 @@ ion-card {
 }
 
 
-.input {
-  border-radius: 30px;
-  border-color: rgb(130, 198, 238);
-  box-shadow: 0px 3px 40px 0px rgb(220, 220, 223);
-  background: transparent;
-  margin-left: 11%;
-  width: 80%;
-  font-family: Josefin Sans;
-  font-size: 16px;
-  line-height: 1.5;
-  height: 46px;
-  padding: 0 20px 0 23px;
+ion-searchbar {
+  --background: #3B91E1;
+  --border-radius: 30px;
+  color: white;
+  --icon-color: white;
 }
 
 #btn2 {
-   margin-left: 40%;
+  --background: #3B91E1;
+   color: white;
+   margin-left: 30%;
    margin-top: 5%;
    --border-radius: 45px;
 }
