--- a/src/app/aboutus/aboutus.page.html
+++ b/src/app/aboutus/aboutus.page.html
@@ -10,67 +10,19 @@
 </ion-header>
 
 <ion-content>
-  <ion-card color="light" class="card2"> <img src="https://media.istockphoto.com/photos/business-people-working-picture-id1169096513?s=612x612"></ion-card>
+  <ion-card color="light" class="card2"> <img src="https://cdn.pixabay.com/photo/2018/03/10/12/00/paper-3213924_1280.jpg"></ion-card>
   <ion-card color="light" class="card1">
     <h1 id="header">About us</h1>
-    <p>In einer nicht genauer bestimmten
-      Zukunft wird der Energiebedarf der Erde
-      zu etwa 70 % durch Helium-3 gedeckt,
-      das auf der „dunklen Seite des Mondes“ –
-      der erdabgewandten Mondseite – durch
-      mehrere, Harvester genannte, riesige
-      Maschinen abgebaut wird. Der weitgehend
-      automatisierte Förderprozess benötigt
-      nur noch einen einzigen menschlichen
-      Bediener. Im Auftrag des weltweit
-      größten Produzenten von Fusionsenergie
-      Lunar Industries Limited arbeitet der
-      Astronaut Sam Bell in einer allein zu
-      diesem Zweck errichteten Mondbasis.
-      Dabei wird er von einer künstlichen
-      Intelligenz namens GERTY unterstützt.
-      Nach fast drei Jahren ohne direkten
-      Kontakt zu anderen Menschen steht er
-      vierzehn Tage vor seiner Ablösung.
-      Mit seiner Frau Tess und seiner kleinen
-      ochter Eve auf der Erde steht er nur per
-      Video-Botschaften in Verbindung. Eine
-      Live-Verbindung zur Erde ist wegen
-      anhaltender technischer Probleme mit
-      einem Kommunikationssatelliten nicht
-      möglich. Sam ist psychisch in schlechter
-      ssung und leidet an Halluzinationen,
-      wodurch es zu einem Unfall mit einem Rover
-      außerhalb der Basis kommt.
-
-      Sam wird nach dem Unfall von
-      seinem drei Jahre jüngeren Klon
-      gerettet, den GERTY inzwischen
-      aktiviert hat. Nach anfänglichen
-      Streitereien begreifen der jüngere u
-      nd der ältere Sam, was in der Station
-      vor sich geht, und kooperieren. Mit
-      GERTYs Hilfe entdecken sie, dass es
-      neben ihnen noch hunderte weitere Klone
-      gibt. Diese warten inaktiv in einem
-      geheimen Untergeschoss der Basis auf
-      ihren Einsatz. Der „Drei-Jahres-Vertrag“
-      t zugleich die Lebenserwartung der Klone.
-      Nach Ablauf dieser drei Jahre wurde jeder
-      vorherige Klon in der vermeintlichen Rückf
-      lugkapsel vernichtet. Klone werden auch da
-      nn getötet, wenn sie ihre Aufgabe nicht me
-      hr erfüllen können. Die Erinnerungen der d
-      iversen Sam Bells an ihre Familie auf der
-      Erde sind mittlerweile etwa 15 Jahre alte
-      Kopien des Bewusstseins eines ursprünglich
-      en Sam Bell, der auf der Erde bei seiner T
-      ochter lebt, während die Ehefrau längst to
-      t ist. </p>
+    <p class="ion-text">This project is created in the design thinking
+      workshop 2021.
+      It's a cooperation between Valence, France and Hamburg, Germany.
+      Our group designed this application for 
+      the topic smart sustainable living.
+     </p>
   </ion-card>
   <ion-card class="card2"><img src="https://www.hamburg.de/contentblob/9272566/02bcd0584241ae65a7149ddcc0136582/data/otto-group-ausbildung-rawezh.jpg"></ion-card>
-  <ion-card class="card2"><img src="https://media.istockphoto.com/photos/glad-to-work-with-you-picture-id951514270?s=612x612"></ion-card>
-  <ion-card class="card4"><img src="https://media.istockphoto.com/photos/stack-of-hands-unity-and-teamwork-concept-picture-id1016780008?s=612x612"></ion-card>
+  <ion-card class="card2"><img src="https://cdn.pixabay.com/photo/2016/03/09/09/22/meeting-1245776_1280.jpg"></ion-card>
+  <ion-card class="card4"><img src="https://cdn.pixabay.com/photo/2020/07/08/04/12/work-5382501_1280.jpg"></ion-card>
   <ion-card color="light" class="card5">
     <h2 id="contact">Contact</h2>
     <p>Telephone number: 0009546863513</p>
