--- a/src/app/signin-provider/signin-provider.page.scss
+++ b/src/app/signin-provider/signin-provider.page.scss
@@ -25,6 +25,7 @@ ion-toolbar {
     margin-right: 7%;
     margin-top: 12%;
     margin-left: 7%;
+    margin-bottom: 10%;
     border-radius: 35px;
   }
 
