--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,25 +19,22 @@
       <ion-card-title id="title">The Animal Product Finder</ion-card-title>
     </ion-card-header>
     <ion-card-content id="text">
-      The Animals were an English rhythm and
-      blues and rock band, formed in Newcastle
-      upon Tyne in the early 1960s. The band moved to
-      London upon finding fame in 1964. The Animals
-      were known for their gritty, bluesy sound
-      and deep-voiced frontman Eric Burdon,
-      as exemplified by their signature song and
-      transatlantic number-one hit single,
-      "The House of the Rising Sun", as well as
-      by hits such as "We Gotta Get Out of This Place",
-      "It's My Life", "Don't Bring Me Down",
-      of the British Invasion of the US.
+      Fair Trade certified products work to support the
+      sustainability of farmland in various regions across
+      the globe, as well as fair wages and safe working
+      conditions for farmers. In order to be considered
+      a Fair Trade product, officially, certification is
+      required so that a third party system can verify
+      the integrity of the source.
+      This is an application to search for fair Animal
+      products nearby. Support your local farmer.
     </ion-card-content>
   </ion-card>
 
 
 
   <ion-card>
-    <ion-img src="https://media.istockphoto.com/photos/group-of-zoo-animals-together-isolated-picture-id989561914?s=612x612"></ion-img>
+    <ion-img src="https://cdn.pixabay.com/photo/2016/11/14/02/58/agriculture-1822450_1280.jpg"></ion-img>
   </ion-card>
 
 
@@ -52,7 +49,7 @@
   </ion-card>
 
 <ion-card>
-  <ion-img src="https://media.istockphoto.com/photos/selection-of-protein-sources-in-kitchen-background-picture-id505592886?s=612x612"></ion-img>
+  <ion-img src="https://cdn.pixabay.com/photo/2017/08/14/17/12/cows-2641195_1280.jpg"></ion-img>
 </ion-card>
 
 </ion-content>
