added search design

--- a/src/app/experience/experience.page.html
+++ b/src/app/experience/experience.page.html
@@ -1,9 +1,15 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>experience</ion-title>
+<ion-header [translucent]="true" class="ion-no-border">
+  <ion-toolbar class="ion-no-border">
+    <ion-title>Costumer Experience</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="menu" color="primary" ></ion-menu-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-back-button color="primary" text="" icon="arrow-back-circle-outline" size="large"></ion-back-button>>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-card color="light" class="card2"> <img src="https://cdn.pixabay.com/photo/2018/09/14/14/31/feedback-3677258_1280.jpg"></ion-card>
 </ion-content>
