--- a/src/app/add-product/add-product.page.scss
+++ b/src/app/add-product/add-product.page.scss
@@ -27,8 +27,25 @@ ion-card {
   border-radius: 400px;
   margin-top: 7%;
   margin-left: 9%;
+
   width: 300px;
   box-shadow: 0px 1px 10px rgba(196, 201, 216, 0.5);
 }
 
+.description {
+  background-color: white;
+  border-radius: 0px;
+  box-shadow: 0px 1px 10px rgba(196, 201, 216, 0.5);
+  margin-top: 7%;
+  margin-left: 9%;
+  width: 300px;
+  height: 150px;
+}
+
+.submit {
+  width: 200px;
+  border-radius: 250%;
+  margin-top: 20px;
+  margin-left: 75px;
+}
 
