--- a/src/app/edit-product/edit-product.page.html
+++ b/src/app/edit-product/edit-product.page.html
@@ -1,21 +1,20 @@
 <ion-header [translucent]="true" class="ion-no-border">
   <ion-toolbar class="ion-no-border">
     <ion-buttons slot="start">
-      <ion-menu-button menu="menu" color="light" ></ion-menu-button>
+      <ion-menu-button menu="menu" color="primary" ></ion-menu-button>
     </ion-buttons>
 
     <ion-buttons slot="end">
-      <ion-back-button color="light" text="" icon="arrow-back-circle-outline"></ion-back-button>>
+      <ion-back-button color="primary" text="" icon="arrow-back-circle-outline"></ion-back-button>>
     </ion-buttons>
 
-    <ion-title id="title" color="light">Add Product</ion-title>
+    <ion-title id="title" color="primary">Edit Product</ion-title>
   </ion-toolbar>
 </ion-header>
 
-
 <ion-content>
   <ion-card color="light">
-    <form [formGroup]="productForm" (ngSubmit)="onFormSubmit()">
+    <form [formGroup]="updateProductForm" (ngSubmit)="updateForm()">
 
     <div class="inp1">
       <ion-input placeholder="Name" type="text" formControlName="product_name"></ion-input>
@@ -37,7 +36,7 @@
     <ion-row>
       <ion-col>
         <div class="submit">
-        <ion-button color="primary" type="submit" shape="full" expand="block">Add Product</ion-button>
+        <ion-button color="primary" type="submit" shape="full" expand="block">Update</ion-button>
       </div>
       </ion-col>
     </ion-row>
