--- a/src/app/experience/experience.page.html
+++ b/src/app/experience/experience.page.html
@@ -1,9 +1,26 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>experience</ion-title>
+<ion-header [translucent]="true" class="ion-no-border">
+  <ion-toolbar class="ion-no-border">
+    <ion-title>Search Products</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="menu" color="primary" ></ion-menu-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-back-button color="primary" text="" icon="arrow-back-circle-outline" size="large"></ion-back-button>>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
 
+
+<ion-content>
+  <ion-card color="light" class="card2"> <img src="https://cdn.pixabay.com/photo/2016/02/20/21/41/vegetables-1212845_1280.jpg"></ion-card>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title id="title2">What Product are you searching for</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+        <ion-searchbar placeholder="Write something"></ion-searchbar>
+        <ion-button id="btn2">SEARCH</ion-button>
+      </ion-card-content>
+  </ion-card>
 </ion-content>
