--- a/src/app/products/products.page.scss
+++ b/src/app/products/products.page.scss
@@ -12,15 +12,42 @@ ion-toolbar {
 }
 
 ion-card {
-  margin: 50px auto;
-  height: 300px;
-  width: 250px;
+  --background: #3B91E1;
+  --color: white;
+  margin: 40px auto;
+  height: 50px auto;
+  width: 350px;
   margin-right: 7%;
-  margin-top: 12%;
+  margin-top: 5%;
   margin-left: 7%;
   border-radius: 35px;
   padding-left: 20px;
   padding-top: 10px;
+}
+
+img {
+  width: 320px;
+  margin-left: -5px;
+  border-radius: 15%;
+}
+
+#name {
+  font-weight: bold;
+  margin-top: 0px;
+}
+
+#producer {
+  margin-top: -10px;
+}
+
+#price {
+  margin-top: -5px;
+}
+
+#description {
+  margin-top: -8px;
+  font-size: 18px;
+  margin-right: 13px;
 }
 
 #header {
